force-app/main/default/objects/ucinn_ascendv2__Process_Review_Transaction_Setting__mdt/ucinn_ascendv2__Process_Review_Transaction_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This settings specify different classes to override the base for different review transaction record types, and different interim records to use for each review transaction record type.</description>
    <label>Process Review Transaction Setting</label>
    <pluralLabel>Process Review Transaction Settings</pluralLabel>
</CustomObject>