force-app/main/default/objects/ucinn_ascendv2__Process_Review_Transaction_Setting__mdt/fields/ucinn_ascendv2__Interim_Possible_Duplicate_Checked__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Interim_Possible_Duplicate_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This controls if new interims should or should pre-checked &quot;Possible Duplicated Checked&quot; field</description>
    <inlineHelpText>Check it if you want your newly created interim to have the &quot;Possible Duplicated Checked&quot; field checked. Otherwise, uncheck it.</inlineHelpText>
    <label>Interim Possible Duplicate Checked</label>
    <type>Checkbox</type>
</CustomField>