force-app/main/default/objects/ucinn_ascendv2__Process_Review_Transaction_Setting__mdt/fields/ucinn_ascendv2__Interim_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Interim_Record_Type_Developer_Name__c</fullName>
    <description>This describes the developer name of the interim&apos;s record type will be used for current defined review transaction record type.</description>
    <inlineHelpText>Populate the interim&apos;s record type developer name. And current defined review transaction record type will create interims with this record type.</inlineHelpText>
    <label>Interim Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>