force-app/main/default/objects/ucinn_ascendv2__Process_Review_Transaction_Setting__mdt/fields/ucinn_ascendv2__Interim_Record_Type_Namespace__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Interim_Record_Type_Namespace__c</fullName>
    <description>This describes the namespace prefix of the interim&apos;s record type will be used for current defined review transaction record type.</description>
    <inlineHelpText>If you defined &apos;Interim Record Type Developer Name&apos;, you may be required to fill in this field if the selected interim record type belongs to a namespace</inlineHelpText>
    <label>Interim Record Type Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>