force-app/main/default/objects/ucinn_ascendv2__Process_Review_Transaction_Setting__mdt/fields/ucinn_ascendv2__Override_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Override_Class_Name__c</fullName>
    <label>Override Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>