force-app/main/default/objects/ucinn_ascendv2__Process_Review_Transaction_Setting__mdt/fields/ucinn_ascendv2__Package_Extension__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Package_Extension__c</fullName>
    <label>Package Extension</label>
    <referenceTo>ucinn_ascendv2__Package_Extension__mdt</referenceTo>
    <relationshipLabel>Process Review Transaction Settings</relationshipLabel>
    <relationshipName>Process_Review_Transaction_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>