force-app/main/default/objects/ucinn_ascendv2__Process_Review_Transaction_Setting__mdt/fields/ucinn_ascendv2__Record_Type_Namespace__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_Namespace__c</fullName>
    <label>Record Type Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>